--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ui.orders_order"
+            android:exported="false" />
+        <activity
+            android:name=".ui.add_order"
+            android:exported="false" />
+        <activity
+            android:name=".ui.edit_order"
+            android:exported="false" />
+        <activity
             android:name=".ui.orders_description"
             android:exported="false" />
         <activity
