--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ui.plates_for_order"
+            android:exported="false" />
+        <activity
             android:name=".ui.orders_order"
             android:exported="false" />
         <activity
